cm4all-workshop (0.2.4) unstable; urgency=low

  * use the libdaemon user code
  * run logger as user "cm4all-logger"
  * delete log directory on purge

 --

cm4all-workshop (0.2.3) unstable; urgency=low

  * set real uid to non-privileged user
  * call dh_installdirs in debian/rules

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Sep 2007 12:15:36 +0200

cm4all-workshop (0.2.2) unstable; urgency=low

  * build with libevent 1.1, show libevent information
  * column "id" should be a primary key
  * fixed gcc warning on PowerPC due to char being unsigned
  * check "time_done IS NULL" for improved index usage
  * added row limit to pg_select_new_jobs()
  * don't use expression in ORDER BY clause, perform two separate queries
    instead

 -- Max Kellermann <mk@cm4all.com>  Fri, 22 Jun 2007 09:48:45 +0200

cm4all-workshop (0.2.1) unstable; urgency=low

  * increment num_counters in workplace_full_plan_names(), this fixes a
    bug where some plans can exceed their concurrency limit
  * plans which are already running have a lower priority
  * fixed getopt optstring
  * generate XHTML documentation in UTF-8

 -- Max Kellermann <mk@cm4all.com>  Thu, 26 Apr 2007 10:37:11 +0200

cm4all-workshop (0.2.0) unstable; urgency=low

  * bugfix: added missing 'return' when the concurrency limit is reached
  * update the plan filter after a new job is started
  * interrupt queue_run() when the plan filter has been changed
  * do not set a new timeout when the queue is disabled
  * try to reconnect to PostgreSQL every 10 seconds
  * implemented a per-plan maximum concurrency
  * set default file's mode to 0600
  * documented the debian default file

 -- Max Kellermann <mk@cm4all.com>  Fri, 16 Feb 2007 11:06:39 +0100

cm4all-workshop (0.1.6) unstable; urgency=low

  * fixed endless loop in expand_vars()
  * pass PostgreSQL DSN as environment variable, for security reasons
  * increased shutdown timeout to 60 seconds
  * moved the -doc package to section non-free/doc
